RESOLVED FIXED198753
REGRESSION (iOS): Can't scroll litter-robot.com checkout form's dropdown menus
https://bugs.webkit.org/show_bug.cgi?id=198753
Summary REGRESSION (iOS): Can't scroll litter-robot.com checkout form's dropdown menus
Antti Koivisto
Reported 2019-06-11 06:34:19 PDT
The shop dropdown doesn't scroll.
Attachments
patch (5.91 KB, patch)
2019-06-11 07:00 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-06-11 06:34:55 PDT
Antti Koivisto
Comment 2 2019-06-11 07:00:15 PDT
WebKit Commit Bot
Comment 3 2019-06-11 08:55:23 PDT
Comment on attachment 371841 [details] patch Clearing flags on attachment: 371841 Committed r246316: <https://trac.webkit.org/changeset/246316>
WebKit Commit Bot
Comment 4 2019-06-11 08:55:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.