REGRESSION (iOS): Can't scroll litter-robot.com checkout form's dropdown menus https://bugs.webkit.org/show_bug.cgi?id=198753 <rdar://problem/51355686>

Reviewed by Simon Fraser.

Source/WebKit:

If an element with 'overflow:scroll' also had 'visibility:hidden' or 'pointer-events:none' it would
capture touches and prevent scrolling of any overlapped scrollers.

* UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:
(WebKit::collectDescendantViewsAtPoint):

Filter out views with 'isUserInteractionEnabled == NO' (set for hidden and pointer-events:none layers).
This prevents it being considered as the first view hit when determining scrolling relationships.

(-[UIView _web_findDescendantViewAtPoint:withEvent:]):

No need to skip here anymore.

LayoutTests:

* fast/scrolling/ios/overflow-scroll-user-interaction-disabled-expected.txt: Added.
* fast/scrolling/ios/overflow-scroll-user-interaction-disabled.html: Added.


Canonical link: https://commits.webkit.org/212732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246316 268f45cc-cd09-0410-ab3c-d52691b4dbfc